My education background

--- a/my-portfolio.html
+++ b/my-portfolio.html
@@ -6,7 +6,27 @@
   </head>
   <body>
     <h1>Josphat Mwangi</h1>
-    
+    <p>
+      I am currently doing software development at Moringa school.The program will run for 20 week i.e 5 weeks for prep and 15 weeks for core.
+      Completed my high school education in 2019 in Koelel high school with B plain as my grade.
+      completed my primary education in Naivasha boy boarding primary school.
+
+    </p>
+    <p>
+      I decided to take programming class because to be a software engineer.Still to build my faundation before join university.
+    </p>
+    <p>
+      My current interest is watching and playing rugby.
+      Also watching movies considering technology and mostly having family time.
+    </p>
+    <h2>Projects list</h2>
+    <ul>
+      <li>media-queries  https://github.com/josphat-mwangi/media-queries.git</li>
+      <li>my-first-webpage  https://github.com/josphat-mwangi/my-first-webpage.git
+      </li>
+    </ul>
+
+
 
   </body>
 </html>
