--- a/my-portfolio.html
+++ b/my-portfolio.html
@@ -15,6 +15,11 @@
     <p>
       I decided to take programming class because to be a software engineer.Still to build my faundation before join university.
     </p>
+    <p>
+      My current interest is watching and playing rugby.
+      Also watching movies considering technology and mostly having family time.
+    </p>
+    
     
 
 
