--- a/my-portfolio.html
+++ b/my-portfolio.html
@@ -19,8 +19,13 @@
       My current interest is watching and playing rugby.
       Also watching movies considering technology and mostly having family time.
     </p>
-    
-    
+    <h2>Projects list</h2>
+    <ul>
+      <li>media-queries  https://github.com/josphat-mwangi/media-queries.git</li>
+      <li>my-first-webpage  https://github.com/josphat-mwangi/my-first-webpage.git
+      </li>
+    </ul>
+
 
 
 
