all the inserstion

--- a/my-portfolio.html
+++ b/my-portfolio.html
@@ -5,27 +5,49 @@
     <link href="css/styles.css" rel=" stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Josphat Mwangi</h1>
+    <h1><strong>Josphat Mwangi</strong> (  <em>Jopa</em>)</h1>
+      <img src="images/JOPA.jpeg" alt="A photo of myself">
+    <div class="important">
     <p>
-      I am currently doing software development at Moringa school.The program will run for 20 week i.e 5 weeks for prep and 15 weeks for core.
-      Completed my high school education in 2019 in Koelel high school with B plain as my grade.
-      completed my primary education in Naivasha boy boarding primary school.
+      Jopa! How am known more as, instead of my real names - Josphat Mwangi.
+
+
+      Young technology enthusiast who’s more than excited to learn more from Moringa School!
+
 
     </p>
     <p>
-      I decided to take programming class because to be a software engineer.Still to build my faundation before join university.
+      I am currently doing software development at Moringa school.
+
+      The program will run for 20 weeks; 5 weeks for prep and 15 weeks for core.
+
+
+
+
+    <p>
+        I Completed my high school education in 2019 in Koelel high school where I scored a B plain.
+    </p>
+
+    <p>
+        My primary education was amazing where I scored 353 marks at Naivasha boys boarding primary school.
+
+    </p>
+
+    <p>
+      My dream is to be able to solve World problems through technology as a software engineer.
+
     </p>
     <p>
-      My current interest is watching and playing rugby.
-      Also watching movies considering technology and mostly having family time.
+      I love watching and playing rugby but mainly I fancy Tech documentaries that inspire my dream of becoming a software engineer!
+
     </p>
-    <h2>Projects list</h2>
+    <h2 class="intro">Projects list</h2>
     <ul>
       <li>media-queries  https://github.com/josphat-mwangi/media-queries.git</li>
       <li>my-first-webpage  https://github.com/josphat-mwangi/my-first-webpage.git
       </li>
     </ul>
-
+    </div>
 
 
 
